objects/adapps__OptimizerPlus_Unused_Reports_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Description__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__LastModifiedDate__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__LastRun__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__LastView__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__ModifierUser__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Unused_Reports__c</fullName>
        <label>Unused Reports</label>
        <referenceTo>adapps__OptimizerPlus_Unused_Reports__c</referenceTo>
        <relationshipLabel>Unused Reports Items</relationshipLabel>
        <relationshipName>Unused_Reports_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Unused Reports Item</label>
    <nameField>
        <label>Unused Reports Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unused Reports Item Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>